JS submission page 157
submission of JS and supporting documents for slideshow and tick counter

--- a/Basic_HTML_8.html
+++ b/Basic_HTML_8.html
@@ -24,7 +24,7 @@
 
         <!--to string method-->
         <p>Please type in an integer</p>
-        <input id="inputNumber" type="text" value=""/>
+        <input id="inputNumber" type="number" value=""/>
         <button onclick="toStringFunction()">Click for a string</button>
         <p id="toString"></p>
 
