--- a/Basic_HTML_10.html
+++ b/Basic_HTML_10.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8">
             <link rel="stylesheet" href="">
-            <script src="./JS/Basic_JavaScript_10.js"></script>
+            
             
 		</head>
 
@@ -38,7 +38,21 @@
         <br>
         <p id="objectPrint"></p>
 
-		
+        <br>
+        <br>
+        <!--Break and continue challenge-->
+        <button onclick="breakLoop()">Click me</button>
+        <p id="breakPrac"></p>
+
+        <br>
+        <br>
+        <!--This is the continue challenge-->
+        <button onclick="continueLoop()">Click me</button>
+        <p id="continuePrac"></p>
+
+
+
+	<script src="./JS/Basic_JavaScript_10.js"></script>	
 	</body>
 
 
